[gd_scene load_steps=11 format=3 uid="uid://bp6n7noe2cwev"]

[ext_resource type="Script" uid="uid://53j8c25xifvh" path="res://scenes/NPCs/WizardNPC/wizard.gd" id="1_7q3tc"]
[ext_resource type="Texture2D" uid="uid://flcs2dc1rig3" path="res://assets/art/Pixel Crawler - Free Pack/Entities/Npc's/Wizzard/Idle/Idle-Sheet.png" id="2_jgpsu"]
[ext_resource type="FontFile" uid="uid://q4du34ot5eei" path="res://assets/fonts/montreal/Montreal-Regular.ttf" id="3_ro5hj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7cokx"]
radius = 5.5
height = 15.999999

[sub_resource type="AtlasTexture" id="AtlasTexture_gj43w"]
atlas = ExtResource("2_jgpsu")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfvw4"]
atlas = ExtResource("2_jgpsu")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_whljj"]
atlas = ExtResource("2_jgpsu")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jerje"]
atlas = ExtResource("2_jgpsu")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2xpiu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gj43w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfvw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whljj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jerje")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_i5uhr"]
radius = 47.80293

[node name="MainCharacter" type="CharacterBody2D"]
scale = Vector2(2.5, 2.5)
script = ExtResource("1_7q3tc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_7cokx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(6.811959e-08, 0)
sprite_frames = SubResource("SpriteFrames_2xpiu")
animation = &"idle"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_i5uhr")

[node name="PromptUse" type="Label" parent="."]
offset_left = -62.399998
offset_top = -53.2
offset_right = 17.999996
offset_bottom = -18.2
theme_override_fonts/font = ExtResource("3_ro5hj")
theme_override_font_sizes/font_size = 12
text = "Press \"E\" to interact"
autowrap_mode = 2

[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
